--- a/src/styles/application/partials/footer.styl
+++ b/src/styles/application/partials/footer.styl
@@ -41,6 +41,7 @@ footer
       justify-content space-between
       width 100%
     input[type="email"]
+      appearance none
       border 2px solid blue
       border-right none
       padding .6em .5em
@@ -56,12 +57,13 @@ footer
         background-color transparent
         color blue
   +below(1024px)
-    width 90%
+    width 80%
   +below(875px)
     flex-wrap wrap
     div:first-child
       width 90%
       margin-bottom 2em
   +below(568px)
+    width 90%
     div:first-child
       width 100%
