--- a/src/styles/application/partials/header.styl
+++ b/src/styles/application/partials/header.styl
@@ -75,6 +75,7 @@ header
         justify-content center
         flex-wrap wrap
         font-size 1.1em
+        width 80%
       #menu-toggle
         display block
       li
